[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/FOnts/RobotoMono-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/FOnts/RobotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0.203922, 0.262745, 0.294118 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.129412, 0.117647, 0.117647, 1 )
shadow_color = Color( 0.294118, 0.231373, 0.321569, 0.6 )
shadow_size = 2

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 451.0
margin_bottom = 597.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 441.0
margin_bottom = 587.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 391.0
margin_bottom = 537.0
custom_constants/separation = 80

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 351.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 166.0
margin_right = 351.0
margin_bottom = 363.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 71.0
margin_right = 279.0
margin_bottom = 197.0
custom_constants/separation = 40

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 208.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = " RESTART "

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
visible = false
margin_top = 79.0
margin_right = 208.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = " SETTINGS "

[node name="Leaderboards" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 208.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = " LEADERBOARDS "

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 208.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 4 )
text = " QUIT "

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Leaderboards" to="." method="_on_Leaderboards_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
